# Norma

./: CMakeLists.txt  FilePanel.cpp  FilePanel.h  Norma.cpp  Norma.h  README.md  brun.sh  build.sh  clean.sh  main.cpp  run.sh
